--- a/assignments/Assignment1.html
+++ b/assignments/Assignment1.html
@@ -2,6 +2,7 @@
 <html>
     <h1><p align="center">Jazzy's Website</h1>
 <p><body>
+<body>
 
 </body>I am an <b>Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
   <p>Please Commission me!</p>
@@ -24,18 +25,18 @@ padding: 36px
 </style>
 
 
-<img style="height:200px"src="file:///Users/jasmine/Downloads/Untitled%2014.png" alt="">
+<img style="height:175px"src="file:///Users/jasmine/Downloads/Untitled%2014.png" alt="">
 </div>
 <div class="card">
   <style media="">
 
   .card {
-  border-radius: 24px;
+  border-radius: 12px;
   /* offset-x, offset-y, blur-radius, spread-radius*/
   box-shadow: 10px 10px 12px 4px rgba(0, 0, 0, 0.5);
   margin: 24px;
-  margin-bottom: 48px
-  padding: 36px
+  margin-bottom: 24px
+  padding: 24px
   }
   </style>
 
@@ -44,3 +45,5 @@ padding: 36px
 </div>
 </html>
 <hr>
+
+</body>
