--- a/assignments/Assignment1.html
+++ b/assignments/Assignment1.html
@@ -25,7 +25,7 @@ padding: 36px
 </style>
 
 
-<img style="height:175px"src="file:///Users/jasmine/Downloads/Untitled%2014.png" alt="">
+<img style="height:175px"src="../images/untitled-14.png" alt="">
 </div>
 <div class="card">
   <style media="">
@@ -41,7 +41,7 @@ padding: 36px
   </style>
 
 <hr>
-<img style="height:200px"src="file:///Users/jasmine/Downloads/Twilight_Redesign.PNG" alt="">
+<img style="height:175px"src="../images/Twilight_RedesignB.png" alt="">
 </div>
 </html>
 <hr>
