--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ padding: 36px
 </style>
 
 
-<img style="height:200px"src="../images/untitled-14.png" alt="">
+<img style="height:200px"src="images/untitled-14.png" alt="">
 </div>
 <div class="card">
 
