--- a/assignments/Assignment1.html
+++ b/assignments/Assignment1.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <h1><p align="center">Jazzy's Website</h1>
-<p><body>
+<head>
+<style>
+.center {
+text-align: center;
+border: 3px solid purple;
+}
+</style>
+</head>
 <body>
+
+
+<div class="center">
+<h1>Jasmine's Portfolio</h1>
+</div>
+
+<br>
 
 </body>I am an <b>Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
   <p>Please Commission me!</p>
