--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+.center {
+text-align: center;
+border: 3px solid purple;
+}
+</style>
+</head>
+<body>
 
 
-  <h1><p align="center">Jasmine's Portfolio
-  </h1>
-  <body>
-    <body style="background-color: hsl(163, 100%, 85%)""/>
+<div class="center">
+<h1>Jasmine's Portfolio</h1>
+</div>
+
+<br>
 
 </body>I am an <b>Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
   <p>Please Commission me!</p>
@@ -14,8 +24,8 @@
   <br> <br><br>
   <hr>
 <div class="card">
-
 <style media="">
+
 .card {
   style="width:12px"
 border-radius: 12px;
@@ -28,24 +38,23 @@ padding: 36px
 </style>
 
 
-<img style="height:200px"src="images/untitled-14.png" alt="">
+<img style="height:175px"src="images/untitled-14.png" alt="">
 </div>
 <div class="card">
-
   <style media="">
 
   .card {
-  border-radius: 24px;
+  border-radius: 12px;
   /* offset-x, offset-y, blur-radius, spread-radius*/
   box-shadow: 10px 10px 12px 4px rgba(0, 0, 0, 0.5);
   margin: 24px;
-  margin-bottom: 48px
-  padding: 36px
+  margin-bottom: 24px
+  padding: 24px
   }
   </style>
 
 <hr>
-<img style="height:200px"src="file:///Users/jasmine/Downloads/Twilight_Redesign.PNG" alt="">
+<img style="height:175px"src="images/Twilight_RedesignB.png" alt="">
 </div>
 </html>
 <hr>
