--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><title>Home</title>
 <style>
 .center {
 text-align: center;
@@ -17,7 +17,7 @@ border: 3px solid purple;
 
 <br>
 
-</body>I am an <b>Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
+</body>I am an<b>Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
   <p>Please Commission me!</p>
   <p>I'm a good Artist</p>
   <i>I'm a really good Artist</i>
