--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head><title>Home</title>
+  <body style="background-color: hsl(170, 100%, 89%)""/>
+
+  <header>
+  <div class="header-background"></div>
+  </header>
+
 <style>
-.center {
-text-align: center;
-border: 3px solid purple;
+.header-background {
+width: 100%;
+height: 100px;
+background:url("images/background.jpg");
 }
 </style>
-</head>
 <body>
 
 
@@ -15,49 +21,43 @@ border: 3px solid purple;
 <h1>Jasmine's Portfolio</h1>
 </div>
 
-<br>
-
-</body>
-I am an<b> Artist</b>, a <b>Freelancer</b>, an <b>Innovator,<b> I AM JASMINE!</b></p></b>
-  <p>Please Commission me!</p>
-  <p>I'm a good Artist</p>
-  <i>I'm a really good Artist</i>
-  <br> <br><br>
-  <hr>
-<div class="card">
-<style media="">
-
-.card {
-  style="width:12px"
-border-radius: 12px;
-/* offset-x, offset-y, blur-radius, spread-radius*/
-box-shadow: 10px 10px 12px 4px rgba(0, 0, 0, 0.5);
-margin: 24px;
-margin-bottom: 48px
-padding: 36px
+<style>
+.border {
+border: 10px groove purple;
 }
 </style>
 
-
-<img style="height:175px"src="images/untitled-14.png" alt="">
-</div>
-<div class="card">
-  <style media="">
-
-  .card {
-  border-radius: 12px;
-  /* offset-x, offset-y, blur-radius, spread-radius*/
-  box-shadow: 10px 10px 12px 4px rgba(0, 0, 0, 0.5);
-  margin: 24px;
-  margin-bottom: 24px
-  padding: 24px
+<style>
+  .center {
+text-align: center;
   }
-  </style>
+</style>
 
-<hr>
-<img style="height:175px"src="images/Twilight_RedesignB.png" alt="">
+<div class="center">
+
+<dl style="padding-left:0px">
+  <div class="border">
+
+
+  <li style="display:inline"><a href="../Portfolio/PortfolioLandingPage.html">Home</a> </li>
+  <li style="display:inline"><a href="../images/Twilight_RedesignB.png">Gallery</a></li>
+  <li style="display:inline"><a href="../index.html">Commissions</a></li>
+  <li style="display:inline"><a href="../index.html">About Me</a></li>
+  <li style="display:inline"><a href="../index.html">Contact Me</a></li>
+</dl>
+
 </div>
-</html>
-<hr>
+
+</body> <p>
+  <hr>
+
+  <img style="height:175px"src="images/untitled-14.png" alt="">
+  <img style="height:175px"src="images/untitled 9.png" alt="">
+
+  <hr>
+  <img style="height:175px"src="images/Twilight_RedesignB.png" alt="">
+  <img style="height:175px"src="images/untitled 11.png" alt="">
+  <hr>
+
 
 </body>
