--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ text-align: center;
 
   <li style="display:inline"><a href="../Portfolio/PortfolioLandingPage.html">Home</a> </li>
   <li style="display:inline"><a href="../images/Twilight_RedesignB.png">Gallery</a></li>
-  <li style="display:inline"><a href="../index.html">Commissions</a></li>
+  <li style="display:inline"><a href="../index.html">Commission Me</a></li>
   <li style="display:inline"><a href="../index.html">About Me</a></li>
   <li style="display:inline"><a href="../index.html">Contact Me</a></li>
 </dl>
@@ -51,6 +51,7 @@ text-align: center;
 </body> <p>
   <hr>
 
+
   <img style="height:175px"src="images/untitled-14.png" alt="">
   <img style="height:175px"src="images/untitled 9.png" alt="">
 
@@ -58,6 +59,10 @@ text-align: center;
   <img style="height:175px"src="images/Twilight_RedesignB.png" alt="">
   <img style="height:175px"src="images/untitled 11.png" alt="">
   <hr>
+
+  <img style="height:175px"src="images/untitled 2.png"alt="">
+
+  <img style="height:175px"src="images/untitled 3.png"alt="">
 
 
 </body>
