--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ text-align: center;
 </body> <p>
   <hr>
 
-
+<div class="transition">
   <img style="height:175px"src="images/untitled-14.png" alt="">
   <img style="height:175px"src="images/untitled 9.png" alt="">
 
@@ -62,7 +62,7 @@ text-align: center;
 
   <img style="height:175px"src="images/untitled 2.png"alt="">
 
-  <img style="height:175px"src="images/untitled 3.png"alt="">
+  <img style="height:175px"src="images/zenspriteanimationaf.gif"alt="">
 
 
 </body>
