--- a/assignments/Assignment9.html
+++ b/assignments/Assignment9.html
@@ -51,6 +51,28 @@
 
       /* Your CSS to complete the assignment goes here */
 
+      .redBlock {
+        float: left;
+        margin-right: 15px
+      }
+
+      .blueBlock {
+        float: right;
+        margin-left: 15px
+      }
+
+.letterBox {
+  float: left;
+  clear: left;}
+
+  .numberBox{
+    float: right;
+    clear: right;
+  }
+
+.task5P1{
+  float: right;
+}
 
     </style>
   </head>
@@ -59,9 +81,8 @@
     <div class="column">
       <h2>Task 1 - Text and Floats (Left)</h2>
       <h3>Make the red block below float left.</h3>
-#task1Block {
-  
-}
+
+
       <div id="task1Block" class="redBlock">FLOAT LEFT</div>
       <p>
         Ullamco elit dolore nam culpa, multos laboris nam sint dolor
@@ -80,7 +101,7 @@
       </p>
       <h2>Task 2 - Text and Floats (Right)</h2>
       <h3>Make the blue block below float right.</h3>
-      <div float: right; id="task2Block" class="blueBlock">FLOAT RIGHT</div>
+      <div id="task2Block" class="blueBlock">FLOAT RIGHT</div>
       <p>
         Fore admodum incididunt qui cernantur si arbitror, ubi
         dolore praetermissum, a anim occaecat officia. Nulla
