--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ text-align: center;
   <div class="border">
 
 
-  <li style="display:inline"><a href="../Portfolio/PortfolioLandingPage.html">Home</a> </li>
+  <li><a href="../Portfolio/PortfolioLandingPage.html">Home</a> </li>
   <li style="display:inline"><a href="../images/Twilight_RedesignB.png">Gallery</a></li>
   <li style="display:inline"><a href="../index.html">Commission Me</a></li>
   <li style="display:inline"><a href="../index.html">About Me</a></li>
