--- a/Portfolio/georgerrmartin.html
+++ b/Portfolio/georgerrmartin.html
@@ -2,8 +2,6 @@
 <html lang="en-US">
 
 
-<div class="background">
-
 <head>
   <style>
 
@@ -31,7 +29,7 @@
     .content {
       grid-area: content;
       padding: 10px;
-      float: center;
+      display:;
     }
         .center {
       text-align: center;
@@ -65,7 +63,7 @@
         }
   </style>
 
-
+<div class="background">
 
 
 <div class="grid">
