--- a/Portfolio/PortfolioLandingPage.html
+++ b/Portfolio/PortfolioLandingPage.html
@@ -1,68 +1,83 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Jasmine's Portfolio</title>
-  </head>
-  <body>
-    <body style="background-color: hsl(170, 100%, 89%)""/>
+<html lang="en-US">
 
-    <header>
-    <div class="header-background"></div>
-    </header>
+<head>
 
-  <style>
-  .header-background {
-  width: 100%;
-  height: 100px;
-  background:url("../images/background.jpg");
+
+<style>
+
+* {
+box-sizing: border-box:
+}
+
+  nav,
+  .navLink {
+    background-color: pink;
   }
-  </style>
-  <body>
-
-
-  <div class="center">
-  <h1>Jasmine's Portfolio</h1>
-  </div>
-
-  <style>
-  .border {
-  border: 10px groove purple;
+  nav {
+    display: flex;
+    flex-direction: row;
   }
-  </style>
 
-  <style>
-    .center {
+.center {
   text-align: center;
-    }
-  </style>
+}
 
-  <div class="center">
+.art-column {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0px;
+  grid-auto-rows: minmax(10px, auto);
+}
 
-  <dl style="padding-left:0px">
-    <div class="border">
+.box {
+  background-color: hsl(246, 100%, 90%);
+  width: 1035px;
+  border: 5px solid pink;
+  padding: 10px;
+}
 
+</style>
+</head>
 
-    <li style="display:inline"><a href="../Portfolio/PortfolioLandingPage.html">Home</a> </li>
-    <li style="display:inline"><a href="../images/Twilight_RedesignB.png">Gallery</a></li>
-    <li style="display:inline"><a href="../index.html">Commissions</a></li>
-    <li style="display:inline"><a href="../index.html">About Me</a></li>
-    <li style="display:inline"><a href="../index.html">Contact Me</a></li>
-  </dl>
+<body>
 
+<div class="center">
+  <nav>
+    <dl style="padding:10px">
+    <div class="navLink">
+          <li style="display:inline">Home
+          <li style="display:inline">Gallery
+          <li style="display:inline">Commission Me
+          <li style="display:inline">About Me
+          <li style="display:inline">Contact Me
+      </div>
+    </div>
+
+    <div class="box"
+  </nav>
+
+<div class="art-column">
+  <div class="one"><img style="height:200px"src="../images/untitled-14.png" alt=""></div>
+    <div class="two"><img style="height:275px"src="../images/untitled 9.png" alt=""></div>
+    <div class="three"><img style="height:275px"src="../images/Twilight_RedesignB.png" alt=""></div>
+    <div class="four"><img style="height:210px"src="../images/untitled 11.png" alt=""></div>
+    <div class="five">Five</div>
+    <div class="six">Six</div>
+    <div class="seven">Seven</div>
+    <div class="eight">Six</div>
+    <div class="nine">Six</div>
+    <div class="ten">Six</div>
+    <div class="eleven">Six</div>
+    <div class="twelve">Six</div>
+    <div class="thirteen">Six</div>
+    <div class="fourteen">Six</div>
+    <div class="fifteen">Six</div>
   </div>
+</div>
 
-  </body> <p>
-    <hr>
-
-    <img style="height:175px"src="../images/untitled-14.png" alt="">
-    <img style="height:175px"src="../images/untitled 9.png" alt="">
-
-    <hr>
-    <img style="height:175px"src="../images/Twilight_RedesignB.png" alt="">
-    <img style="height:175px"src="../images/untitled 11.png" alt="">
-    <hr>
-
-
+</body>
+<body style="background-color: hsl(162, 100%, 90%)""/>
 
 
 </html>
