--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -78,15 +78,15 @@ box-sizing: border-box:
   </nav>
 
 <div class="art-column">
-  <div class="one"><img style="height:200px"src="../images/untitled-14.png" alt=""></div>
-    <div class="two"><img style="height:275px"src="../images/untitled 9.png" alt=""></div>
-    <div class="three"><img style="height:255px"src="../images/Twilight_RedesignB.png" alt=""></div>
-    <div class="four"><img style="height:210px"src="../images/untitled 11.png" alt=""></div>
-    <div class="five"><img style="height:210px"src="../images/untitled 6.png" alt=""></div>
-    <div class="six"><img style="height:210px"src="../images/untitled 1.png" alt=""></div>
-    <div class="seven"><img style="height:250px"src="../images/untitled 8.png" alt=""></div>
-    <div class="eight"><img style="height:250px"src="../images/untitled 13.png" alt=""></div>
-    <div class="nine"><img style="height:250px"src="../images/untitled 4.png" alt=""></div>
+  <div class="one"><img style="height:200px"src="file:///Users/jasmine/Downloads/untitled-14.png" alt=""></div>
+    <div class="two"><img style="height:275px"src="file:///Users/jasmine/Downloads/untitled 9.png" alt=""></div>
+    <div class="three"><img style="height:255px"src="file:///Users/jasmine/Downloads/Twilight_RedesignB.png" alt=""></div>
+    <div class="four"><img style="height:210px"src="file:///Users/jasmine/Downloads/untitled 11.png" alt=""></div>
+    <div class="five"><img style="height:210px"src="file:///Users/jasmine/Downloads/untitled 6.png" alt=""></div>
+    <div class="six"><img style="height:210px"src="file:///Users/jasmine/Downloads/untitled 1.png" alt=""></div>
+    <div class="seven"><img style="height:250px"src="file:///Users/jasmine/Downloads/untitled 8.png" alt=""></div>
+    <div class="eight"><img style="height:250px"src="file:///Users/jasmine/Downloads/untitled 13.png" alt=""></div>
+    <div class="nine"><img style="height:250px"src="file:///Users/jasmine/Downloads/untitled 4.png" alt=""></div>
 
   </div>
 </div>
@@ -97,9 +97,9 @@ box-sizing: border-box:
 <h4>An experienced individual in Custom Apparel design, Character Design, and Logo Design</h4>
 
 <div id="slideshow">
-  <img id="slide1" class="slideshowImage" src="../images/cyot.jpeg"/>
-  <img id="slide2" class="slideshowImage" src="../images/character-design-intro_900x506.jpeg"/>
-  <img id="slide3" class="slideshowImage" src="../images/Expert-Custom-Logo-Designer.png"/>
+  <img id="slide1" class="slideshowImage" src="file:///Users/jasmine/Downloads/cyot.jpeg"/>
+  <img id="slide2" class="slideshowImage" src="file:///Users/jasmine/Downloads/character-design-intro_900x506.jpeg"/>
+  <img id="slide3" class="slideshowImage" src="file:///Users/jasmine/Downloads/Expert-Custom-Logo-Designer.png"/>
 
   </div>
 
