--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 
 <style>
 
+@media screen and (min-width: 200px) and (max-width: 480px)
+{
+body {
+  display: flex;
+}
+h1, h3, h4 {
+  display: flex;
+}
+  }
+
 * {
 box-sizing: border-box:
 }
