--- a/examples/index0.html
+++ b/examples/index0.html
@@ -39,7 +39,7 @@ padding: 36px
 </style>
 
 
-<img style="height:175px"src="images/untitled-14.png" alt="">
+<img style="height:175px"src="../images/untitled-14.png" alt="">
 </div>
 <div class="card">
   <style media="">
@@ -55,7 +55,7 @@ padding: 36px
   </style>
 
 <hr>
-<img style="height:175px"src="images/Twilight_RedesignB.png" alt="">
+<img style="height:175px"src="../images/Twilight_RedesignB.png" alt="">
 </div>
 </html>
 <hr>
