--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,6 +6,19 @@
 
 <style>
 
+
+        @media screen and (min-width: 200px) and (max-width: 480px){
+
+          h1, h3, h4, nav, body {
+            display: inline-flex;
+          }
+          box {
+            display: inline-flex;
+          }
+          art-column{
+            display: flex;
+          }
+        }
 * {
 box-sizing: border-box:
 }
