--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ box-sizing: border-box:
   padding: 10px;
 }
 
+.box2 {
+  background-color: hsl(319, 100%, 99%);
+  width: 1035px;
+  border: 5px solid pink;
+  padding: 10px;
+}
+
   #slideshow {
     height: 350px;
     text-align: center;
@@ -84,8 +91,8 @@ box-sizing: border-box:
       </div>
 
 
-    <div class="box"
-  </nav>
+    <div class="box">
+
 
 <div class="art-column">
   <div class="one"><img style="height:200px"src="../images/untitled-14.png" alt=""></div>
@@ -130,6 +137,8 @@ box-sizing: border-box:
 
     <script type="text/javascript" src="../js/portfolioSlideshoe.js"></script>
 </div>
+
+<div class="box2">
 
 </body>
 <body style="background-color: hsl(162, 100%, 90%)""/>
