--- a/assignments/assignment17.html
+++ b/assignments/assignment17.html
@@ -24,6 +24,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
 
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          Art
+        </div>
+        <div class="col">
+          Commission
+        </div>
+        <div class="col">
+          Full Gallery
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+  <div class="row">
+    <div class="col">
+    Doop
+    </div>
+    <div class="col-6">
+      Boop
+    </div>
+    <div class="col">
+      Do Wa Bedoop
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+    Swish
+    </div>
+    <div class="col-5">
+      Slash
+    </div>
+    <div class="col">
+      Big bash
+    </div>
+  </div>
+</div>
+
     <div class="alert alert-danger" role="alert">
   DANGER ALERT! DANGER ALERT!
 </div>
