--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@ box-sizing: border-box:
   </nav>
 
 <div class="art-column">
-  <div class="one"><img style="height:200px"src="../images/untitled-14.png" alt=""></div>
-    <div class="two"><img style="height:275px"src="../images/untitled9.png" alt=""></div>
-    <div class="three"><img style="height:255px"src="../images/Twilight_RedesignB.png" alt=""></div>
-    <div class="four"><img style="height:210px"src="../images/untitled11.png" alt=""></div>
-    <div class="five"><img style="height:210px"src="../images/untitled6.png" alt=""></div>
-    <div class="six"><img style="height:210px"src="../images/untitled1.png" alt=""></div>
-    <div class="seven"><img style="height:250px"src="../images/untitled8.png" alt=""></div>
-    <div class="eight"><img style="height:250px"src="../images/untitled13.png" alt=""></div>
-    <div class="nine"><img style="height:250px"src="../images/untitled4.png" alt=""></div>
+  <div class="one"><img style="height:200px" src="images/untitled-14.png" alt=""></div>
+    <div class="two"><img style="height:275px" src="images/untitled9.png" alt=""></div>
+    <div class="three"><img style="height:255px" src="images/Twilight_RedesignB.png" alt=""></div>
+    <div class="four"><img style="height:210px" src="images/untitled11.png" alt=""></div>
+    <div class="five"><img style="height:210px" src="images/untitled6.png" alt=""></div>
+    <div class="six"><img style="height:210px" src="images/untitled1.png" alt=""></div>
+    <div class="seven"><img style="height:250px" src="images/untitled8.png" alt=""></div>
+    <div class="eight"><img style="height:250px" src="images/untitled13.png" alt=""></div>
+    <div class="nine"><img style="height:250px" src="images/untitled4.png" alt=""></div>
 
   </div>
 </div>
